project-vpc-wp-db3/sec_group_WP.tf
resource "aws_security_group" "wordpress_server" {
  name        = "wordpress_server"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.WP_DB_vpc.id}"

  ingress {
    description = "Allow ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow TCP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${var.tags}"
}
